5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1811_2566.log
== TEST (2019-06-08 00:54:36) 
-- CODE:
from math import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = int)
z[0] = (s/size(z)) * 100
z[1] = (t/size(z)) * 100
z[2] = (q/size(z)) * 100
z[3] = (qi/size(z)) * 100
z[4] = (sex/size(z)) * 100
z[5] = (sab/size(z)) * 100
for n in z:
	i = round(i,1)
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    faltas = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 00:54:50) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = int)
z[0] = (s/size(z)) * 100
z[1] = (t/size(z)) * 100
z[2] = (q/size(z)) * 100
z[3] = (qi/size(z)) * 100
z[4] = (sex/size(z)) * 100
z[5] = (sab/size(z)) * 100
for n in z:
	i = round(i,1)
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 00:55:21) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = int)
z[0] = (s/size(z)) * 100
z[1] = (t/size(z)) * 100
z[2] = (q/size(z)) * 100
z[3] = (qi/size(z)) * 100
z[4] = (sex/size(z)) * 100
z[5] = (sab/size(z)) * 100
for n in z:
	n = round(n,1)
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 00:56:06) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = int)
z[0] = (s/size(z)) * 100
z[1] = (t/size(z)) * 100
z[2] = (q/size(z)) * 100
z[3] = (qi/size(z)) * 100
z[4] = (sex/size(z)) * 100
z[5] = (sab/size(z)) * 100
for n in z:
	n = float(round(n,1))
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 00:57:03) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = int)
z[0] = (s/size(faltas)) * 100
z[1] = (t/size(faltas)) * 100
z[2] = (q/size(faltas)) * 100
z[3] = (qi/size(faltas)) * 100
z[4] = (sex/size(faltas)) * 100
z[5] = (sab/size(faltas)) * 100
for n in z:
	n = float(round(n,1))
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 00:57:04) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = int)
z[0] = (s/size(faltas)) * 100
z[1] = (t/size(faltas)) * 100
z[2] = (q/size(faltas)) * 100
z[3] = (qi/size(faltas)) * 100
z[4] = (sex/size(faltas)) * 100
z[5] = (sab/size(faltas)) * 100
for n in z:
	n = float(round(n,1))
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 00:57:20) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = int)
z[0] = (s/size(faltas)) * 100
z[1] = (t/size(faltas)) * 100
z[2] = (q/size(faltas)) * 100
z[3] = (qi/size(faltas)) * 100
z[4] = (sex/size(faltas)) * 100
z[5] = (sab/size(faltas)) * 100
for n in z:
	n = float(round(n,1))
print(z)

-- EXECUTION TIME:
1.0334
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 00:59:03) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = int)
z[0] = (s/size(faltas)) * 100
z[1] = (t/size(faltas)) * 100
z[2] = (q/size(faltas)) * 100
z[3] = (qi/size(faltas)) * 100
z[4] = (sex/size(faltas)) * 100
z[5] = (sab/size(faltas)) * 100
for n in z:
	n = round(n,2)
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 01:00:17) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = float)
z[0] = (s/size(faltas)) * 100
z[1] = (t/size(faltas)) * 100
z[2] = (q/size(faltas)) * 100
z[3] = (qi/size(faltas)) * 100
z[4] = (sex/size(faltas)) * 100
z[5] = (sab/size(faltas)) * 100
for n in z:
	n = round(n,1)
print(z)

-- EXECUTION TIME:
1.18188
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538 30.76923077]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:00:30) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = float)
z[0] = (s/size(faltas)) * 100
z[1] = (t/size(faltas)) * 100
z[2] = (q/size(faltas)) * 100
z[3] = (qi/size(faltas)) * 100
z[4] = (sex/size(faltas)) * 100
z[5] = (sab/size(faltas)) * 100
for n in z:
	n = round(n,1)
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:01:03) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = float)
z[0] = (s/size(faltas)) * 100
z[1] = (t/size(faltas)) * 100
z[2] = (q/size(faltas)) * 100
z[3] = (qi/size(faltas)) * 100
z[4] = (sex/size(faltas)) * 100
z[5] = (sab/size(faltas)) * 100
for n in z:
	n = round(n,1)
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 01:01:22) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = float)
z[0] = (s/size(faltas)) * 100
z[1] = (t/size(faltas)) * 100
z[2] = (q/size(faltas)) * 100
z[3] = (qi/size(faltas)) * 100
z[4] = (sex/size(faltas)) * 100
z[5] = (sab/size(faltas)) * 100
for n in z:
	n = round(n,1)
print(z)

-- EXECUTION TIME:
1.28142
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538 30.76923077]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:01:26) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = float)
z[0] = (s/size(faltas)) * 100
z[1] = (t/size(faltas)) * 100
z[2] = (q/size(faltas)) * 100
z[3] = (qi/size(faltas)) * 100
z[4] = (sex/size(faltas)) * 100
z[5] = (sab/size(faltas)) * 100
for n in z:
	n = round(n,1)
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:02:23) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = float)
z[0] = (s/size(faltas)) * 100
z[1] = (t/size(faltas)) * 100
z[2] = (q/size(faltas)) * 100
z[3] = (qi/size(faltas)) * 100
z[4] = (sex/size(faltas)) * 100
z[5] = (sab/size(faltas)) * 100
for n in z:
	n = round(n,1)
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:04:25) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = float)
z[0] = (s/size(faltas)) * 100
z[1] = (t/size(faltas)) * 100
z[2] = (q/size(faltas)) * 100
z[3] = (qi/size(faltas)) * 100
z[4] = (sex/size(faltas)) * 100
z[5] = (sab/size(faltas)) * 100
for n in z:
	n = float(round(n,1))
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:06:42) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = float)
z[0] = (s/size(faltas)) * 100
z[1] = (t/size(faltas)) * 100
z[2] = (q/size(faltas)) * 100
z[3] = (qi/size(faltas)) * 100
z[4] = (sex/size(faltas)) * 100
z[5] = (sab/size(faltas)) * 100
print(round(z,1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:07:28) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = float)
z[0] = (s/size(faltas)) * 100
z[1] = (t/size(faltas)) * 100
z[2] = (q/size(faltas)) * 100
z[3] = (qi/size(faltas)) * 100
z[4] = (sex/size(faltas)) * 100
z[5] = (sab/size(faltas)) * 100
for i in z:
	i = round(i,1)
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:11:32) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = float)
z[0] = (s/size(faltas)) * 100
z[1] = (t/size(faltas)) * 100
z[2] = (q/size(faltas)) * 100
z[3] = (qi/size(faltas)) * 100
z[4] = (sex/size(faltas)) * 100
z[5] = (sab/size(faltas)) * 100
for i in z:
	i = round(i,1)
	print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:12:47) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = float)
z[0] = (s/size(faltas)) * 100
z[1] = (t/size(faltas)) * 100
z[2] = (q/size(faltas)) * 100
z[3] = (qi/size(faltas)) * 100
z[4] = (sex/size(faltas)) * 100
z[5] = (sab/size(faltas)) * 100
for i in z:
	s = round(i,1)
	print(s)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:16:51) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = float)
z[0] = round((s/size(faltas)) * 100,1)
z[1] = round((t/size(faltas)) * 100,1)
z[2] = round((q/size(faltas)) * 100,1)
z[3] = round((qi/size(faltas)) * 100,1)
z[4] = round((sex/size(faltas)) * 100,1)
z[5] = round((sab/size(faltas)) * 100,1)
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 01:17:04) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = float)
z[0] = round((s/size(faltas)) * 100,1)
z[1] = round((t/size(faltas)) * 100,1)
z[2] = round((q/size(faltas)) * 100,1)
z[3] = round((qi/size(faltas)) * 100,1)
z[4] = round((sex/size(faltas)) * 100,1)
z[5] = round((sab/size(faltas)) * 100,1)
print(z)

-- EXECUTION TIME:
1.09253
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:53:52) 
-- CODE:
from numpy import *
faltas = array(eval(input("digite as semanas de falta: ")))
s,t,q,qi,sex,sab = 0,0,0,0,0,0
for pos in faltas:
	if(pos == 2):
		s = s + 1
	if(pos == 3):
		t = t + 1
	if(pos == 4):
		q = q + 1
	if(pos == 5):
		qi = qi + 1
	if(pos == 6):
		sex = sex + 1
	if(pos == 7):
		sab = sab + 1
z = zeros(6,dtype = float)
z[0] = round((s/size(faltas)) * 100,1)
z[1] = round((t/size(faltas)) * 100,1)
z[2] = round((q/size(faltas)) * 100,1)
z[3] = round((qi/size(faltas)) * 100,1)
z[4] = round((sex/size(faltas)) * 100,1)
z[5] = round((sab/size(faltas)) * 100,1)
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
